# InsertName

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  allout.txt  cmake.sh  cmake_install.cmake  dump.txt  out.txt  valgrind_output.valgrind
.cmake/api/v1/reply/: cache-v2-f001a50615dd9fd35baf.json  cmakeFiles-v1-a543c8fb65d322f9ad4b.json  codemodel-v2-92392682103559ba3cdb.json  index-2024-07-14T20-26-56-0108.json  target-client-2e8f6ec55de024f01e97.json  target-engine-e90139f7c979a34b63f6.json
.kdev4/: InsertName.kdev4
client_data/log/: gpu_dump.nv-gpudmp
client_data/network/: ca.pem  server.crt
client_data/shaders/: ShaderRules.txt  shaders.json
client_data/shaders/src/: basicMesh.vert  triangle.vert
engine_data/config/: device.json  instance.json
engine_data/config/segments/test/: models.json
install/share/cmake/VulkanMemoryAllocator/: VulkanMemoryAllocatorConfig.cmake  VulkanMemoryAllocatorConfigVersion.cmake
scripts/: compile_shaders.sh  gfxreconstruct.sh  setup-env.sh
server_data/: README.md
server_data/.old/: config.cfg
server_data/.old/network/: server.key
server_data/auth/: config.json
server_data/auth/network/: server.crt  server.key
server_data/chat/: config.json
server_data/control/: config.json
server_data/voice/: config.json
server_data/world/: config.json
shaders/src/: triangle.frag  triangle.vert
src/: main.cpp  settings.cpp  settings.hpp
src/.old/: AdminConsole.cpp  AdminConsole.hpp  ClientHandler.cpp  ClientHandler.hpp  Config.hpp  Log.cpp  Log.hpp  Server.cpp  buildConfig.hpp
src/.old/ThreadPool/: ThreadPool.cpp
src/.old/account/: NetworkManager.cpp  Settings.cpp  Settings.hpp  UserManager.cpp
src/client/: clientDefines.hpp  main.cpp  settings.cpp  settings.hpp
src/client/accaunt/: UserManager.hpp
src/client/account/: NetworkManager.cpp  NetworkManager.hpp  NetworkManager.tpp  Settings.cpp  Settings.hpp  UserManager.cpp  UserManager.hpp
src/client/network/: NetworkClient.cpp  NetworkClient.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkMangaer.cpp
src/client/renderer/: Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Instance.cpp  Instance.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp
src/client/renderer/core/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DataBuffer.cpp  DataBuffer.hpp  DescriptorManager.cpp  DescriptorManager.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  UniformBuffer.cpp  UniformBuffer.hpp  UniformBuffers.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/client/renderer/ext/: Model.cpp  Model.hpp  Texture.cpp  Texture.hpp
src/client/renderer/window/: Window.cpp  Window.hpp
src/client/window/: Window.cpp  Window.hpp
src/common/: TypeUtils.cpp  TypeUtils.hpp
src/engine/: app.cpp  app.hpp
src/engine/renderer/base/: PhysicalDevice.cpp  PhysicalDevice.hpp  instance.cpp  instance.hpp  logicalDevice.cpp  logicalDevice.hpp  physicalDevice.cpp  physicalDevice.hpp  scheduler.cpp  scheduler.hpp  swapchain.cpp  swapchain.hpp  vma_impl.cpp  window.cpp  window.hpp
src/engine/renderer/core/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DataBuffer.cpp  DataBuffer.hpp  DescriptorManager.cpp  DescriptorManager.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  Renderer.cpp  Renderer.hpp  Semaphore.cpp  Semaphore.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp
src/engine/renderer/ext/: Model.cpp  Model.hpp  Texture.cpp  Texture.hpp
src/engine/renderer/ext/camera/: Camera.cpp  Camera.hpp
src/engine/renderer/ext/model/: DynamicModelInstance.hpp  InstanceData.cpp  InstanceData.hpp  InstanceManager.cpp  InstanceManager.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelInstance.cpp  ModelInstance.hpp  StaticInstanceData.cpp  StaticInstanceData.hpp  StaticInstanceManager.cpp  StaticInstanceManager.hpp  StaticModelInstance.cpp  StaticModelInstance.hpp
src/engine/renderer/ui/: model.cpp  model.hpp  modelManager.cpp  modelManager.hpp
src/engine/renderer/util/: dataBuffer.hpp
src/engine/renderer/util/mem/: dataBuffer.cpp  dataBuffer.hpp  memoryPoolManager.cpp  memoryPoolManager.hpp
src/engine/renderer/window/: Window.cpp  Window.hpp
src/engine/types/: Transform.hpp
src/installer/: main.cpp
src/server/: AdminConsole.cpp  AdminConsole.hpp  ClientHandler.cpp  ClientHandler.hpp  Config.cpp  Config.hpp  HandleClient.hpp  HanldeClient.cpp  Log.cpp  Log.hpp  NetworkManager.cpp  NetworkManager.hpp  Server.cpp  Server.hpp  ThreadPool.hpp  ThreadPool.tpp  buildConfig.hpp  defines.hpp  main.cpp  notes.md
src/server/.old/: main.cpp
src/server/.old/ThreadPool/: ThreadPool.hpp
src/server/auth/: Auth.cpp  Auth.hpp  ClientHandler.cpp  ClientHandler.hpp  Settings.cpp  Settings.hpp  main.cpp  messageHandler.cpp  messageHandler.hpp
src/server/chat/: main.cpp
src/server/common/: ClientServiceLink.cpp  ClientServiceLink.hpp
src/server/control/: AdminConsole.cpp  AdminConsole.hpp  AdvancedSettingsManager.cpp  AdvancedSettingsManager.hpp  Log.cpp  Log.hpp  ServiceLink.cpp  ServiceLink.hpp  main.cpp
src/server/shared/: ClientHandler.cpp  ClientHandler.hpp  ClientServiceLink.cpp  ClientServiceLink.hpp  SettingsManager.cpp  SettingsManager.hpp  structs.hpp
src/server/voice/: main.cpp  messageHandler.cpp
src/server/world/: main.cpp
tools/gfxreconstruct/: VkLayer_gfxreconstruct.json  gfxrecon-compress
